<resources>
    <string name="app_name">Destinasi wisata HSS</string>
    <string name="LoremIpsum">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="Address">Alamat</string>
    <string name="open">Buka</string>
    <string name="information">informasi umum :</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="check_location">Cek Lokasi</string>
    <string name="time">08.00 - 16.00</string>
    <string name="favorite">Favorit</string>
    <string name="share">Share</string>
</resources>
