<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lynx_white"
    tools:context=".ui.destination.DestinationDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/content_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@color/black" />

        <TextView
            android:id="@+id/content_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_24dp"
            android:text="@string/title"
            android:textColor="@color/blue_night"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/content_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/concrete"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/content_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/LoremIpsum"
            android:textColor="@color/blue_night"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:text="@string/information"
            android:textColor="@color/concrete"
            android:textSize="14sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/open" />

                <TextView
                    android:id="@+id/content_time"
                    style="@style/TextSpec.Value"
                    android:text="@string/time" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/fasilitas" />

                <TextView
                    android:id="@+id/content_facilities"
                    style="@style/TextSpec.Value"
                    android:text="@string/LoremIpsum" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/Address" />

                <TextView
                    android:id="@+id/content_address"
                    style="@style/TextSpec.Value"
                    android:text="@string/LoremIpsum" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/btn_custom"
            android:text="@string/check_location"
            android:textColor="@color/lynx_white" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>