<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PostDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/content_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@color/black" />

        <TextView
            android:id="@+id/content_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/content_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:drawableLeft="@drawable/ic_location_24dp"
            android:drawablePadding="4dp"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:text="@string/location" />

        <TextView
            android:id="@+id/content_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/LoremIpsum" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:padding="8dp"
            android:textSize="12sp"
            android:text="@string/information"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/open"/>
                <TextView
                    android:id="@+id/content_jam"
                    style="@style/TextSpec.Value"
                    android:text="@string/time"/>
            </TableRow>

        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/fasilitas"/>
                <TextView
                    android:id="@+id/content_fasilitas"
                    style="@style/TextSpec.Value"
                    android:text="@string/LoremIpsum"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/Address"/>
                <TextView
                    android:id="@+id/content_address"
                    style="@style/TextSpec.Value"
                    android:text="@string/LoremIpsum"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/buttonshape"
            android:textColor="@color/grey"
            android:text="@string/check_location"/>
    </LinearLayout>
</ScrollView>