<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp"
    android:elevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/content_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignBottom="@id/content_img"
            android:src="@drawable/black_gradient"/>

        <TextView
            android:id="@+id/content_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/content_img"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/title"
            android:textColor="@color/colorIcon"/>

        <TextView
            android:id="@+id/content_location"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_title"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_location_24dp"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/location"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/content_info"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_location"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLength="100"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/LoremIpsum" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_info"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_favorite"
                android:background="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/favorite"
                android:textColor="#b2bec3"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/buttonshape"
                android:text="@string/share"
                android:textColor="#b2bec3"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>