<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/content_img"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignBottom="@id/content_img"
            android:src="@drawable/img_gradient" />

        <TextView
            android:id="@+id/content_name"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/content_img"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/content_location"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/concrete"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/content_article"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_location"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:lineSpacingExtra="1.5dp"
            android:maxLines="2"
            android:text="@string/LoremIpsum"
            android:textColor="@color/blue_night"
            android:textSize="13sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>